...
            />
          )}

          <MenuItem
            icon={<Calculator size={22} color={colors.primary} />}
            label={t("navigation.payslipCalculator")}
            testID="payslip-drawer-item"
            onPress={() => {
              props.navigation.navigate("PayslipCalculator");
              props.navigation.closeDrawer();
            }}
          />

          <MenuItem
            icon={<Clock size={22} color={colors.primary} />}
            label={t("navigation.ftlCalculator")}
            testID="ftl-drawer-item"
            onPress={() => {
              props.navigation.navigate("FtlCalculator");
              props.navigation.closeDrawer();
            }}
          />

          <MenuItem
            icon={<Thermometer size={22} color={colors.primary} />}
            label={t("navigation.ctcCalculator")}
            testID="ctc-drawer-item"
            onPress={() => {
              props.navigation.navigate("ColdTempCorrection");
              props.navigation.closeDrawer();
            }}
          />

          <MenuItem
            icon={<Plane size={22} color={colors.primary} />}
            label={t("navigation.airports")}
            testID="airports-drawer-item"
            onPress={() => {
              props.navigation.navigate("Airports");
              props.navigation.closeDrawer();
            }}
          />

...
