...
const Tab = createBottomTabNavigator<FtlTabParamList>();

export const FtlTabs: React.FC = () => {
  const { t } = useTranslation();

  return (
    <View style={styles.container} testID="ftl-screen">
      <StatusBar barStyle="light-content" backgroundColor={colors.primary} />
      <Tab.Navigator
        screenOptions={{
          headerShown: false,
          tabBarActiveTintColor: colors.primary,
          tabBarInactiveTintColor: colors.textSecondary,
...
